--- a/Download.html
+++ b/Download.html
@@ -182,7 +182,7 @@
               <div class="u-align-center u-container-style u-layout-cell u-size-30 u-layout-cell-1">
                 <div class="u-container-layout u-container-layout-1">
                   <h1 class="u-custom-font u-font-roboto-slab u-text u-text-default u-text-palette-1-dark-2 u-text-2">Stable</h1>
-                  <a href="#" class="u-active-none u-border-3 u-border-active-palette-2-dark-1 u-border-hover-palette-2-base u-border-palette-1-base u-btn u-button-style u-custom-font u-font-roboto-slab u-hover-none u-none u-text-hover-palette-1-dark-2 u-text-palette-1-base u-btn-1">DIFT beta 0.0.103</a>
+                  <a href="#" class="u-active-none u-border-3 u-border-active-palette-2-dark-1 u-border-hover-palette-2-base u-border-palette-1-base u-btn u-button-style u-custom-font u-font-roboto-slab u-hover-none u-none u-text-hover-palette-1-dark-2 u-text-palette-1-base u-btn-1">DIFT 0.0.001</a>
                 </div>
               </div>
               <div class="u-align-center u-container-style u-layout-cell u-size-30 u-layout-cell-2">
