--- a/Download.html
+++ b/Download.html
@@ -164,7 +164,7 @@
       <div class="u-expanded-width u-palette-1-dark-1 u-shape u-shape-rectangle u-shape-1"></div>
       <div class="u-palette-1-light-2 u-shape u-shape-rectangle u-shape-2"></div>
       <div class="u-shape u-shape-rectangle u-white u-shape-3"></div>
-      <img class="u-image u-image-1" src="#" data-image-width="1200" data-image-height="1048">
+      <img class="u-image u-image-1" src="images/default-image.jpg" data-image-width="1200" data-image-height="1048">
       <div class="u-align-left u-container-style u-group u-similar-fill u-group-1">
         <div class="u-container-layout u-container-layout-1">
           <h2 class="u-text u-text-1"> RESEARCH DOCUMENTS</h2>
